# todocli

./: .gitignore  README.md  alembic.ini  haslodoDB.txt  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6dbfb6976e69_add_x_to_task.py  d24a0d444833_create_task_table.py
info/: podsumowanie.md
src/: cli.py  config.py  db.py
src/todo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_db.py
